fix: rendering issues on Safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,21 +110,22 @@ a:focus {
 }
 
 .main {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  font-family: "Reem Kufi", sans-serif;
+  font-weight: normal;
   justify-content: center;
-  text-align: center;
   min-height: 100vh;
   padding: 3rem;
+  text-align: center;
 }
 
 .main .intro * {
-  font-family: "Reem Kufi", sans-serif;
   font-size: 4rem;
   font-weight: bold;
-  white-space: nowrap;
   line-height: 130%;
+  white-space: nowrap;
 }
 
 .main .tagline {
@@ -132,28 +133,19 @@ a:focus {
 }
 
 .main .tagline * {
-  font-family: "Roboto Mono", monospace;
-  font-weight: bold;
   white-space: nowrap;
 }
 
 .main .tagline .designation {
+  font-family: "Roboto Mono", monospace;
   font-size: 1.8rem;
-}
-
-.main .tagline .skills-array {
-  font-size: 1.5rem;
-}
-
-.main .tagline .skills {
-  font-family: "Reem Kufi", sans-serif;
-  font-weight: normal;
+  font-weight: bold;
 }
 
 .icons-social {
-  width: 22rem;
   display: flex;
   justify-content: space-between;
+  width: 22rem;
 }
 
 .icons-social i {
